--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#inscricoes">Inscrições</a></li>
-                <li><a href="#info">Informações</a></li>
                 <li><a href="#cronograma">Cronograma</a></li>
                 <li><a href="#regras">Regras</a></li>
                 <li><a href="#ferramentas">Ferramentas</a></li>
@@ -74,7 +73,7 @@
                 de criação de jogos
                 GRATUITO, aberto aos
                 desenvolvedores de jogos em geral e interessados. Esse ano vai acontecer dos dias 28/1/2022 a 30/1/2022,
-                em modelo híbrido, hospedado durante o fim de semana na UNIFEOB. A Global Game Jam é um evento mundial
+                em modelo 100% online. A Global Game Jam é um evento mundial
                 no qual desenvolvedores de jogos e interessados reunem-se em locais ao redor do mundo, formam grupos e,
                 cada grupo, colabora na criação de um jogo em 48 horas a partir de um tema comum.</p>
             <a data-aos="fade-right" class="explore-button" href="#inscricoes">Explorar mais</a>
@@ -106,56 +105,12 @@
         </section>
     </section>
 
-    <section class="info" id="info">
-        <section class="inside-info">
-            <h2 data-aos="fade-right">Informações</h2>
-
-            <div class="inside-info-div" data-aos="zoom-in">
-                <p class="inside-info-div-title">Localização</p>
-                <p class="inside-info-div-text">Av. Dr. Octávio da Silva Bastos, 2439 - Jd Nova São João - São João da
-                    Boa Vista - SP</p>
-            </div>
-
-            <div class="inside-info-div" data-aos="zoom-in">
-                <p class="inside-info-div-title">Hora do sono</p>
-                <p class="inside-info-div-text">Uma sala de dormir para homens e outra sala para mulheres.</p>
-            </div>
-
-            <div class="inside-info-div" data-aos="zoom-in">
-                <p class="inside-info-div-title">Internet</p>
-                <p class="inside-info-div-text">Acesso Wifi via rede Global Game Jam (sem senha) ou UNIFEOB VISITANTES
-                    (senha: visitantesadm).</p>
-            </div>
-
-            <div class="inside-info-div" data-aos="zoom-in">
-                <p class="inside-info-div-title">Banho</p>
-                <p class="inside-info-div-text">Ao lado da quadra, na entrada do campus da UNIFEOB. <br> A chave fica na
-                    guarita na entrada do campus. <br> Vestiário para homens e mulheres.</p>
-            </div>
-
-            <div class="inside-info-div" data-aos="zoom-in">
-                <p class="inside-info-div-title">Alimentação</p>
-                <p class="inside-info-div-text">Café da manhã no sábado e domingo. Cantinas abertas para os
-                    participantes em horários específicos.</p>
-            </div>
-
-            <div class="inside-info-div remove-margin" data-aos="zoom-in">
-                <p class="inside-info-div-title">Telefones importantes</p>
-                <p class="inside-info-div-text">Segurança (portaria): 3634-3225 <br> Segurança (celular): 99897-0119
-                    <br> Emergência médica (Samu): 192 <br> Bombeiro: 193 <br> Procure sempre informar os problemas ao
-                    staff do evento.
-                </p>
-            </div>
-
-        </section>
-    </section>
-
     <section class="timeline" id="cronograma">
         <section class="inside-timeline">
             <h2 data-aos="fade-left">Cronograma e horários</h2>
             <p data-aos="fade-left">Acesse a apresentação a seguir e entenda o cronograma e os horários em detalhes.</p>
             <a data-aos="fade-left" class="access-button" target="_blank"
-                href="https://docs.google.com/document/d/1tPdJnGbiC8WQ7pUGPGAOx4Rm5-vybQKjt1jN7447c9Q/">Acessar</a>
+                href="https://drive.google.com/file/d/1hLp-fiL2FG3Xiqx6qht3WtErG3UysUeI/view">Acessar</a>
         </section>
     </section>
 
@@ -170,7 +125,9 @@
 
                 <div class="inside-rules-div-card" data-aos="zoom-in">
                     <img src="images/2.svg" alt="2">
-                    <p>O jogo deve ser adequado ao tema (que será divulgado no dia do evento).</p>
+                    <p>O jogo deve ser adequado ao tema. <a
+                            href="https://www.youtube.com/watch?v=6on52GnVE0w&feature=emb_logo" target="_blank">Conheça
+                            o tema.</a></p>
                 </div>
 
                 <div class="inside-rules-div-card" data-aos="zoom-in">
@@ -286,7 +243,6 @@
                 <a href="#inicio">Início</a>
                 <a href="#sobre">Sobre</a>
                 <a href="#inscricoes">Inscrição</a>
-                <a href="#info">Informações</a>
                 <a href="#cronograma">Cronograma</a>
                 <a href="#regras">Regras</a>
                 <a href="#workshops">Workshops</a>
@@ -294,8 +250,10 @@
                     style="margin-bottom: 0 !important;">Código de conduta</a>
             </div>
             <div class="inside-footer-div">
-                <p>Av. Dr. Octávio da Silva Bastos, 2439 Jd Nova São João - São João da Boa Vista - SP</p>
-                <div class="inside-footer-div-icons">
+                <div class="inside-footer-div-icons" style="display: flex; flex-direction: column;">
+                    <p>Participe do grupo do WhatsApp. <a style="color: #fff; text-decoration: underline;"
+                            href="https://www.google.com/url?q=https://chat.whatsapp.com/JnXxPV0dttS0giM9H2ULl8&sa=D&source=editors&ust=1643244393857204&usg=AOvVaw1Yr8eGEqIwss-IT-LuX3La"
+                            target="_blank">Clique Aqui</a></p>
                     <a target="_blank" href="https://www.instagram.com/ggj.saojoao/">
                         <img src="images/instagram-white.svg" alt="Instagram Global Game Jam São João da Boa Vista">
                     </a>
